# training-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
docs/: temporal-sessions.md
docs/plans/: 2026-07-07-svelte-training-app.md  2026-07-13-preserve-advances-and-changelog.md  2026-07-14-agent-driven-training-system.md
skills/: README.md
skills/training-logbook/: SKILL.md
skills/training-logbook/agents/: openai.yaml
skills/training-progression-review/: SKILL.md
skills/training-progression-review/agents/: openai.yaml
skills/training-session-logger/: SKILL.md
skills/training-session-logger/agents/: openai.yaml
src/: main.rs
tests/: cli.rs
